--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "htmlencode": "0.0.4"
+    "htmlencode": "0.0.4",
+    "qrcode-generator": "^1.0.7"
   }
 }
