--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "hogan.js": "^3.0.2",
     "htmlencode": "0.0.4",
-    "qrcode-generator": "^1.0.7"
+    "qrcode-generator": "^1.0.7",
+    "quu": "^0.1.0"
   }
 }
